--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -42,56 +42,56 @@
 
     <main class="productos">
         <div class="card">
-            <img src="../images/cherryMxBlack.webp" alt="">
+            <img src="../images/cherryMxBlack.webp" alt="cherryMxBlack">
             <h4>Switches CherryMx Black</h4>
             <p>$6.00</p>
             <button>Comprar</button>
         </div>
 
         <div class="card">
-            <img src="../images/cherryMxGreen.webp" alt="">
+            <img src="../images/cherryMxGreen.webp" alt="cherryMxGreen">
             <h4>Switches CherryMx Green</h4>
             <p>$7.00</p>
             <button>Comprar</button>
         </div>
 
         <div class="card">
-            <img src="../images/keycaps1.webp" alt="">
+            <img src="../images/keycaps1.webp" alt="Keycaps Transparentes">
             <h4>Keycaps Transparentes</h4>
             <p>$20.00</p>
             <button>Comprar</button>
         </div>
 
         <div class="card">
-            <img src="../images/keycaps2.webp" alt="">
+            <img src="../images/keycaps2.webp" alt="Keycaps de Madera">
             <h4>Keycaps de Madera</h4>
             <p>$45.00</p>
             <button>Comprar</button>
         </div>
 
         <div class="card">
-            <img src="../images/teclado1.webp" alt="">
+            <img src="../images/teclado1.webp" alt="Teclado azul con negro">
             <h4>Teclado Negro y Azul</h4>
             <p>$100.00</p>
             <button>Comprar</button>
         </div>
 
         <div class="card">
-            <img src="../images/teclado2.webp" alt="">
+            <img src="../images/teclado2.webp" alt="Teclado morado">
             <h4>Teclado Morado</h4>
             <p>$100.00</p>
             <button>Comprar</button>
         </div>
 
         <div class="card">
-            <img src="../images/cable1.webp" alt="">
+            <img src="../images/cable1.webp" alt="Cable rosa">
             <h4>Cable Rosa</h4>
             <p>$8.00</p>
             <button>Comprar</button>
         </div>
 
         <div class="card">
-            <img src="../images/estuche1.webp" alt="">
+            <img src="../images/estuche1.webp" alt="Estuche para teclado">
             <h4>Estuche</h4>
             <p>$15.00</p>
             <button>Comprar</button>
@@ -108,9 +108,17 @@
                     <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
                   </svg>
             </li>
+            <li>
+              <svg xmlns="http://www.w3.org/2000/svg" width="256" height="256" viewBox="0 0 256 256"><path fill="rgba(0, 0, 0, 0)" d="M247.39 68.94A8 8 0 0 0 240 64h-30.43a48.66 48.66 0 0 0-41.47-24a46.91 46.91 0 0 0-33.75 13.7A47.9 47.9 0 0 0 120 88v6.09C79.74 83.47 46.81 50.72 46.46 50.37a8 8 0 0 0-13.65 4.92c-4.31 47.79 9.57 79.77 22 98.18a110.93 110.93 0 0 0 21.88 24.2c-15.23 17.53-39.21 26.74-39.47 26.84a8 8 0 0 0-3.85 11.93c.75 1.12 3.75 5.05 11.08 8.72C53.51 229.7 65.48 232 80 232c70.67 0 129.72-54.42 135.75-124.44l29.91-29.9a8 8 0 0 0 1.73-8.72Zm-45 29.41a8 8 0 0 0-2.32 5.14C196 166.58 143.28 216 80 216c-10.56 0-18-1.4-23.22-3.08c11.51-6.25 27.56-17 37.88-32.48A8 8 0 0 0 92 169.08c-.47-.27-43.91-26.34-44-96c16 13 45.25 33.17 78.67 38.79A8 8 0 0 0 136 104V88a32 32 0 0 1 9.6-22.92A30.94 30.94 0 0 1 167.9 56c12.66.16 24.49 7.88 29.44 19.21a8 8 0 0 0 7.33 4.79h16Z"/></svg>
+            </li>
+
+            <li>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="rgba(0, 0, 0, 0)" d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2m-.2 2A3.6 3.6 0 0 0 4 7.6v8.8C4 18.39 5.61 20 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6C20 5.61 18.39 4 16.4 4H7.6m9.65 1.5a1.25 1.25 0 0 1 1.25 1.25A1.25 1.25 0 0 1 17.25 8A1.25 1.25 0 0 1 16 6.75a1.25 1.25 0 0 1 1.25-1.25M12 7a5 5 0 0 1 5 5a5 5 0 0 1-5 5a5 5 0 0 1-5-5a5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3a3 3 0 0 0 3 3a3 3 0 0 0 3-3a3 3 0 0 0-3-3Z"/></svg>
+              </li>
             </ul>
         </nav>
     </footer>
+
     <script src="../bootstrap-5.3.0-alpha3-dist/js/bootstrap.min.js"></script>
 </body>
 </html>
