--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -8,9 +8,14 @@
     <link rel="stylesheet" href="../bootstrap-5.3.0-alpha3-dist/css/bootstrap.min.css">
     <!-- CSS Propio -->
     <link rel="stylesheet" href="../css/styles.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bakbak+One&display=swap" rel="stylesheet">
+
+    <!-- Favicon -->
+    <link rel="icon" href="../images/mxswlogoonly.png">
+
     <title>Nosotros</title>
 </head>
 <body>
