--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bakbak+One&display=swap" rel="stylesheet">
 
+        <!-- Favicon -->
+        <link rel="icon" href="images/mxswlogoonly.png">
+
     <title>MX Keyboards</title>
 </head>
 <body>
