--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -13,6 +13,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bakbak+One&display=swap" rel="stylesheet">
 
+        <!-- Favicon -->
+        <link rel="icon" href="../images/mxswlogoonly.png">
+
     <title>Sucursales</title>
 </head>
 <body>
